subscribe form + fix for errors

--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -18,6 +18,7 @@
     color: $color-placeholder;
     transition: transform $ease-main, color $ease-main, font $ease-main;
     z-index: 2;
+    pointer-events: none;
 
     @include screen('sm') {
       @include text16;
