--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -195,11 +195,11 @@
     padding-left: 0;
 
     #{$radio}__box {
-      top: 3px;
+      top: 6px;
       transform: translate3d(0, 0, 0);
 
       @include screen('sm') {
-        top: 0;
+        top: 3px;
       }
     }
 
@@ -207,6 +207,7 @@
       padding-left: 33px;
       border-bottom: 1px solid $color-form-border;
       transition: border $ease-main;
+      padding-top: 3px;
       padding-bottom: 10px;
       box-sizing: border-box;
 
@@ -353,11 +354,11 @@
     padding-left: 0;
 
     #{$check}__box {
-      top: 3px;
+      top: 6px;
       transform: translate3d(0, 0, 0);
 
       @include screen('sm') {
-        top: 0;
+        top: 3px;
       }
     }
 
@@ -365,6 +366,7 @@
       padding-left: 33px;
       border-bottom: 1px solid $color-form-border;
       transition: border $ease-main;
+      padding-top: 3px;
       padding-bottom: 10px;
       box-sizing: border-box;
 
