--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -125,6 +125,7 @@ include ../components/pivot-table/pivot-table
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-arrange-viewing/popup-arrange-viewing
 include ../components/popup-signin/popup-signin
+include ../components/popup-subscribe/popup-subscribe
 include ../components/side-navigation/side-navigation
 include ../components/space-info/space-info
 include ../components/space-offer/space-offer
