--- a/app/pages/about-tenant/about-tenant.pug
+++ b/app/pages/about-tenant/about-tenant.pug
@@ -14,7 +14,7 @@ block content
             +promo-section-title().js-sr_bottom Spacepool for <br> Guests
             +promo-section-text.js-sr_bottom Based in London, Spacepool is a flexible workspace marketplace that connects businesses with a variety of offices and workspaces from which to operate, including the large number of local independent operators. Whether you’re a start-up, scale-up or established organisation, we have the solution for you.
             +e.buttons.js-sr_bottom
-              +button('a')(href="#")._border._border_bg-white._short._border_dark.__button Sign Up for newsletter
+              +button('a')(href="#popup-subscribe")._border._border_bg-white._short._border_dark.__button.js-popup Sign Up for newsletter
           +promo-section-column._right._media.js-sr_right
             +promo-section-media('assets/images/about-lead2.jpg')
     +promo-section._mg112
@@ -70,7 +70,7 @@ block content
             +e.suggestion.js-sr_bottom(data-target-slot="suggestion")
               +promo-section-text._small._mg64 Waiting for the sign to change your ordinary workspace to something completely different. new and inspiring? Here it is!
               +e.buttons
-                +button('a')(href="#")._border._border_dark._short.__button Sign Up for newsletter
+                +button('a')(href="#popup-subscribe")._border._border_dark._short.__button.js-popup Sign Up for newsletter
           +promo-section-column._right._white.js-sr_opacity
             +feature('assets/images/picture-search.svg', 'Search', '_search').js-sr_bottom Search online for the workspace you need. We understand your priorities, and our extensive filter tool lets you narrow your search by price, availability, location, type of workspace - and more! With photos and detailed listing information, we tailor your results to help you make a decision that suits you.
             +feature('assets/images/picture-pointer.svg', 'Hire', '_pointer').js-sr_bottom Once you’ve found your ideal workspace, submit your hire request. We’re confident you’ll be able to make a quick and easy decision, but if you want more details or would like to visit the workplace, our online messaging service lets you contact your Host to make the necessary arrangements. Remember to review the house rules and our terms and conditions.
@@ -81,3 +81,6 @@ block content
 block panels
   +main-menu-special
     +nav-list(getData('main-menu-special.json'))
+
+block popups
+  +popup-subscribe#popup-subscribe
