--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -34,6 +34,8 @@ block content
         +link(href="#popup-signin").js-popup Popup Sign In
         +link(href="#popup-add-rental-offer").js-popup Popup Add rental offer
         +link(href="#popup-arrange-viewing").js-popup Popup Arrange Viewing
+        +link(href="#popup-subscribe").js-popup Popup subscribe
+        +link(href="#popup-subscribe-host").js-popup Popup subscribe for host
 
 block panels
   +main-menu
@@ -41,3 +43,5 @@ block panels
 block popups
   +popup-add-offer#popup-add-rental-offer
   +popup-arrange-viewing#popup-arrange-viewing
+  +popup-subscribe#popup-subscribe
+  +popup-subscribe-host#popup-subscribe-host
