--- a/app/blocks/popups/popups.scss
+++ b/app/blocks/popups/popups.scss
@@ -54,6 +54,19 @@
     }
   }
 
+  &__heading {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 28px 70px 24px;
+    border-bottom: 1px solid $color-border-light;
+
+    @include screen('sm') {
+      padding: 18px 20px;
+    }
+  }
+
   &__title {
     @include heading-3;
 
