--- a/app/components/popup-signin/popup-signin.scss
+++ b/app/components/popup-signin/popup-signin.scss
@@ -13,6 +13,8 @@
   }
 
   &__socials {
+    position: relative;
+    z-index: 2;
     width: 100%;
 
     &:not(:last-child) {
@@ -21,7 +23,6 @@
   }
 
   &__form {
-    overflow: hidden;
     display: block;
 
     .grid {
