fixes slider on about pages

--- a/app/blocks/gradients/gradients.pug
+++ b/app/blocks/gradients/gradients.pug
@@ -4,3 +4,21 @@ mixin gradients()
       linearGradient#main-gradient(x1="0%" y1="0%" x2="100%" y2="0%")
         stop(offset="0%" stop-color="#30e3c9")
         stop(offset="100%" stop-color="#0caecc")
+      linearGradient#form-gradient1(x1="0%" y1="0%" x2="0%" y2="100%")
+        stop(offset="0%" stop-color="rgba(29, 213, 240, 1)")
+        stop(offset="28%" stop-color="rgba(41, 247, 133, 1)")
+        stop(offset="67%" stop-color="rgba(235, 68, 51, 1)")
+        stop(offset="100%" stop-color="rgba(255, 150, 0, 1)")
+      linearGradient#form-gradient2(x1="100%" y1="0%" x2="0%" y2="0%")
+        stop(offset="0%" stop-color="rgba(255,150,0, 1)")
+        stop(offset="4%" stop-color="rgba(255,150,0, 1)")
+        stop(offset="33%" stop-color="rgba(235,68,51, 1)")
+        stop(offset="71%" stop-color="rgba(41,247,133, 1)")
+        stop(offset="100%" stop-color="rgba(29,213,240, 1)")
+      linearGradient#form-gradient3(x1="56%" y1="0%" x2="44%" y2="100%")
+        stop(offset="0%" stop-color="rgba(255,150,0, 1)")
+        stop(offset="4%" stop-color="rgba(255,150,0, 1)")
+        stop(offset="38%" stop-color="rgba(235,68,51, 1)")
+        stop(offset="76%" stop-color="rgba(41,247,133, 1)")
+        stop(offset="90%" stop-color="rgba(29,213,240, 1)")
+        stop(offset="100%" stop-color="rgba(29,213,240, 1)")
