--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -122,6 +122,11 @@ $color-landing-subtitles: #31e1c9;
 $color-slider-dot: #58e4cf;
 $color-landing-mask: rgba(10, 33, 32, .35);
 $color-header-menu-active: #8d99a7;
+$color-status-bar: #7fd3a4;
+$color-facility-active: #afb6bf;
+$color-selection-text: #2b3036;
+$color-yellow-mask: #e09a12;
+$color-text-pale: #abb6c4;
 
 // ##########
 // Transitions
