--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -23,6 +23,10 @@
       }
     }
 
+    &_pad30 {
+      padding-left: 30px;
+    }
+
     &_small {
       padding-left: 25px;
     }
@@ -144,6 +148,11 @@
     &_calendar2 {
       width: 14px;
       height: 14px;
+    }
+
+    &_save {
+      width: 15px;
+      height: 15px;
     }
 
     #{$b}_no-shadow & {
