--- a/app/components/side-navigation/side-navigation.scss
+++ b/app/components/side-navigation/side-navigation.scss
@@ -9,6 +9,10 @@
   min-height: 585px;
   box-sizing: border-box;
 
+  &_pt46 {
+    padding-top: 46px;
+  }
+
   .is-IE & {
     height: 585px;
   }
@@ -18,7 +22,8 @@
     padding-right: 12%;
   }
 
-  &__navigation {
+  &__navigation,
+  &__info {
 
     &:not(:last-child) {
       margin-bottom: 50px;
