--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -9,6 +9,7 @@ include ../blocks/blog-news/blog-news
 include ../blocks/blog/blog
 include ../blocks/box/box
 include ../blocks/boxes/boxes
+include ../blocks/breadcrumbs-form/breadcrumbs-form
 include ../blocks/breadcrumbs/breadcrumbs
 include ../blocks/bubble/bubble
 include ../blocks/burger/burger
@@ -67,6 +68,7 @@ include ../blocks/offer-select/offer-select
 include ../blocks/offer/offer
 include ../blocks/offers/offers
 include ../blocks/overlay/overlay
+include ../blocks/page-info/page-info
 include ../blocks/page-title/page-title
 include ../blocks/page/page
 include ../blocks/pagination/pagination
@@ -74,6 +76,7 @@ include ../blocks/panel/panel
 include ../blocks/payment-card/payment-card
 include ../blocks/popups/popups
 include ../blocks/price/price
+include ../blocks/progress/progress
 include ../blocks/promo-section/promo-section
 include ../blocks/put-block-into-slot/put-block-into-slot
 include ../blocks/rating/rating
@@ -117,6 +120,7 @@ include ../components/filter/filter
 include ../components/footer/footer
 include ../components/header/header
 include ../components/lead/lead
+include ../components/location/location
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
