--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -122,7 +122,7 @@ block content
                   +form-section-wrapper._noflex
                     +checkbox('settings', '4')._border Send Me information about new offers via E-mail
             +form-panel()(data-hidden-panel).__panel_fixed
-              +link-icon('select-arrow', 'button')(type="reset")._back._bold.__button.js-form-reset.js-hide-form-panel Discard <span class="hide-sm">changes</span>
+              +link-icon('select-arrow', 'button')(type="reset")._back._bold._no-shadow.__button.js-form-reset.js-hide-form-panel Discard <span class="hide-sm">changes</span>
               +button('button')(type="submit").__button_wide.js-form-submit.js-hide-form-panel Save changes
 
 block panels
