--- a/app/pages/blog-article/blog-article.pug
+++ b/app/pages/blog-article/blog-article.pug
@@ -8,7 +8,7 @@ block content
     .container
       +grid.grid_layout
         +col({ lg:12, xl: 2})
-          +link-icon('select-arrow')._back._bold.__back(href="#") Back to blog
+          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to blog
         +col({ lg:12, xl: 8}).hide-lg
           +breadcrumbs(['Home', 'Blog', 'Space Pool hosts have a little more to think about when considering office improvement projects'])
         +col({ lg:12, xl: 2}).hide-lg
