--- a/app/pages/host-space-offers/host-space-offers.pug
+++ b/app/pages/host-space-offers/host-space-offers.pug
@@ -12,7 +12,7 @@ block content
     .container
       +e.wrapper
         +page-header-side
-          +link-icon('select-arrow')._back._bold.__back(href="#") Back to space list
+          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to space list
         +page-header-main.hide-md
           +breadcrumbs(['Home', 'My offers', 'Blooming Founders (Former Blooms London old Factory)'])
           +button-plus('a')(href="#popup-add-rental-offer")._plus_big.__button_big.js-popup Add new rental offer for this space
