--- a/app/pages/order-summary/order-summary.pug
+++ b/app/pages/order-summary/order-summary.pug
@@ -12,7 +12,7 @@ block content
     .container
       +grid.grid_layout
         +col({ md:12, xl: 3})
-          +link-icon('select-arrow')._back._bold.__back(href="#") Back to Space
+          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to Space
         +col({ md:12, xl: 9}).hide-md
           +breadcrumbs(['Home', 'Search Results', 'Blooming Founder (formre Blooms...', 'Reservation request'])
   +content-origin._reverse._wide-lg._last
