--- a/app/blocks/gradients/gradients.pug
+++ b/app/blocks/gradients/gradients.pug
@@ -22,3 +22,8 @@ mixin gradients()
         stop(offset="76%" stop-color="rgba(41,247,133, 1)")
         stop(offset="90%" stop-color="rgba(29,213,240, 1)")
         stop(offset="100%" stop-color="rgba(29,213,240, 1)")
+      linearGradient#form-gradient4(x1="0%" y1="0%" x2="0%" y2="100%")
+        stop(offset="0%" stop-color="rgba(255,150,0, 1)")
+        stop(offset="23%" stop-color="rgba(235,68,51, 1)")
+        stop(offset="77%" stop-color="rgba(41,247,133, 1)")
+        stop(offset="100%" stop-color="rgba(29,213,240, 1)")
