--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -58,6 +58,11 @@
   padding-bottom: 8px;
   min-height: 40px;
   resize: none;
+
+  &_bpd {
+    padding-top: 9px;
+    padding-bottom: 16px;
+  }
 }
 
 .checkradio {
