--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -624,6 +624,20 @@
   &__mesure {
     flex: 1;
   }
+
+  &_flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    #{$b} {
+
+      &__buttons {
+        width: 100%;
+      }
+    }
+  }
 }
 
 .error-message {
