--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -95,6 +95,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
   }
 
+  &_t55 {
+    margin-top: -55px;
+  }
+
   &_no-top:not(.grid_inner) {
     margin-top: 0;
   }
@@ -186,6 +190,10 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       @include screen('sm') {
         padding: $grid-gap-vertical-big 5px 0;
       }
+    }
+
+    #{$b}_t55 & {
+      padding-top: 55px;
     }
 
     #{$b}_blog & {
