--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -54,8 +54,9 @@
   }
 
   &:hover {
-    background-color: $color-white;
+    background-color: $color-bg;
     color: $color-basic-dark;
+    border-bottom-color: $color-white;
   }
 }
 
