--- a/app/pages/new-space/new-space-step1.pug
+++ b/app/pages/new-space/new-space-step1.pug
@@ -31,7 +31,7 @@ block content
               +page-info-description Step 1 <i>of 7</i>
         +content-column-main._no-ptop
           +location
-
+            +button-icon('button', 'select-arrow')._short._wide(type="submit") Continute to Step 2
 
 block panels
   +main-menu-inner
