--- a/app/components/location/location.scss
+++ b/app/components/location/location.scss
@@ -15,12 +15,14 @@
     position: relative;
     display: block;
     width: 69.6%;
+    min-height: 585px;
 
     @include screen('lg') {
       width: 60%;
     }
 
     @include screen('md') {
+      min-height: 0;
       width: 100%;
       height: 270px;
     }
@@ -53,9 +55,11 @@
   }
 
   &__info {
-    display: block;
+    display: flex;
     background-color: $color-white;
     width: 30.4%;
+    box-sizing: border-box;
+    padding: 63px 35px 53px;
 
     @include screen('lg') {
       width: 40%;
@@ -63,6 +67,18 @@
 
     @include screen('md') {
       width: 100%;
+    }
+
+    @include screen('sm') {
+      padding: 50px 20px;
+    }
+
+    .form__section {
+      margin-bottom: 50px;
+    }
+
+    .form__buttons {
+      margin-top: auto;
     }
   }
 }
