--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -89,6 +89,10 @@
         margin-bottom: 105px;
       }
     }
+
+    &_mta {
+      margin-top: auto;
+    }
   }
 
   &__content {
@@ -344,6 +348,16 @@
       @include screen('sm') {
         padding-top: 0;
       }
+    }
+
+    &_h100p {
+      height: 100%;
+    }
+
+    &_fxe {
+      justify-content: flex-end;
+      align-items: flex-end;
+      align-content: flex-end;
     }
 
     &_negative-mg {
@@ -635,6 +649,34 @@
 
       &__buttons {
         width: 100%;
+      }
+    }
+  }
+
+  &_pd {
+    box-sizing: border-box;
+    padding: 38px 53px 46px;
+
+    @include screen('sm') {
+      padding: 40px 20px;
+    }
+  }
+
+  &__button {
+
+    &_mxw300 {
+      max-width: 300px;
+
+      @include screen('lg') {
+        max-width: 100%;
+      }
+    }
+
+    &_mb8 {
+      margin-bottom: 8px;
+
+      @include screen('md') {
+        margin-bottom: 0;
       }
     }
   }
