--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -189,6 +189,11 @@
         padding-top: 0;
       }
     }
+
+    &_flex {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
 
   &_last {
