--- a/app/pages/new-space/new-space-step1.pug
+++ b/app/pages/new-space/new-space-step1.pug
@@ -29,7 +29,7 @@ block content
                 +icon('location').icon_location._grad1
               +page-info-title Specify place <br> location
               +page-info-description Step 1 <i>of 7</i>
-        +content-column-main._no-ptop
+        +content-column-main._no-ptop._flex
           +location
             +button-icon('button', 'select-arrow')._short._wide(type="submit") Continute to Step 2
 
