--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -127,6 +127,8 @@ $color-facility-active: #afb6bf;
 $color-selection-text: #2b3036;
 $color-yellow-mask: #e09a12;
 $color-text-pale: #abb6c4;
+$color-border-lightest: #ebeef0;
+$color-facility-hover: #6d7580;
 
 // ##########
 // Transitions
