--- a/app/blocks/facility/facility.pug
+++ b/app/blocks/facility/facility.pug
@@ -4,3 +4,17 @@ mixin facility(icon, iconCls)
       block
     +e.image
       +icon(icon)(class="__icon " + iconCls)
+
+mixin facility-checkbox(icon, iconCls, name, value, checked)
+  +b.LABEL.facility-checkbox&attributes(attributes)
+    - if (checked) {
+      +e.INPUT(type="checkbox" name=name value=value checked="checked").input
+    - } else {
+      +e.INPUT(type="checkbox" name=name value=value).input
+    - }
+    +b.facility&attributes(attributes)
+      +e.name
+        block
+      +icon('check').check
+      +e.image
+        +icon(icon)(class="__icon " + iconCls)
