--- a/app/blocks/facility/facility.scss
+++ b/app/blocks/facility/facility.scss
@@ -1,6 +1,7 @@
 .facility {
   $b: &;
 
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -12,6 +13,7 @@
   padding: 13px 16px 16px;
   color: $color-basic;
   border-radius: 3px;
+  transition: border $ease-main, color $ease-main, background $ease-main;
 
   @include screen('sm') {
     padding: 4px 11px 13px 8px;
@@ -41,12 +43,34 @@
     display: flex;
     align-items: flex-end;
     justify-content: flex-end;
+    width: 65px;
+    height: 65px;
+
+    @include screen('sm') {
+      width: 59px;
+      height: 59px;
+    }
+  }
+
+  &__check {
+    position: absolute;
+    bottom: 16px;
+    left: 17px;
+    display: block;
+    width: 17px;
+    height: 13px;
+    fill: $color-white;
+    opacity: 0;
+    transition: opacity $ease-main;
   }
 
   &__icon {
     font-size: 0;
     line-height: 0;
     fill: currentColor;
+    transition: fill $ease-main;
+    max-width: 100%;
+    max-height: 100%;
 
     &_shower {
       width: 56px;
@@ -130,6 +154,273 @@
         width: 48px;
         height: 28px;
       }
+    }
+
+    &_chair {
+      width: 46px;
+      height: 46px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 41px;
+        height: 41px;
+      }
+    }
+
+    &_cleaning {
+      width: 31px;
+      height: 57px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 28px;
+        height: 52px;
+      }
+    }
+
+    &_disabled {
+      width: 40px;
+      height: 50px;
+
+      @include screen('sm') {
+        width: 36px;
+        height: 45px;
+      }
+    }
+
+    &_tool {
+      width: 52px;
+      height: 41px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 47px;
+        width: 37px;
+      }
+    }
+
+    &_mail {
+      width: 46px;
+      height: 46px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 41px;
+        height: 41px;
+      }
+    }
+
+    &_furniture {
+      width: 40px;
+      height: 53px;
+      margin-bottom: 2px;
+      margin-right: 4px;
+
+      @include screen('sm') {
+        width: 36px;
+        height: 48px;
+      }
+    }
+
+    &_meetings {
+      width: 47px;
+      height: 45px;
+
+      @include screen('sm') {
+        width: 42px;
+        height: 41px;
+      }
+    }
+
+    &_phone {
+      width: 49px;
+      height: 47px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 44px;
+        height: 42px;
+      }
+    }
+
+    &_print {
+      width: 47px;
+      height: 43px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 42px;
+        height: 39px;
+      }
+    }
+
+    &_reception {
+      width: 62px;
+      height: 53px;
+      margin-bottom: 4px;
+      margin-right: -2px;
+
+      @include screen('sm') {
+        width: 56px;
+        height: 48px;
+      }
+    }
+
+    &_traiding {
+      width: 41px;
+      height: 41px;
+      margin-bottom: 4px;
+      margin-right: 2px;
+
+      @include screen('sm') {
+        width: 37px;
+        height: 37px;
+      }
+    }
+
+    &_wifi {
+      width: 42px;
+      height: 42px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 38px;
+        height: 38px;
+      }
+    }
+
+    &_secure {
+      width: 48px;
+      height: 41px;
+      margin-bottom: 4px;
+      margin-right: -2px;
+
+      @include screen('sm') {
+        width: 43px;
+        height: 37px;
+      }
+    }
+
+    &_time {
+      width: 46px;
+      height: 46px;
+      margin-bottom: 2px;
+      margin-right: -4px;
+
+      @include screen('sm') {
+        width: 41px;
+        height: 41px;
+      }
+    }
+
+    &_utilities {
+      width: 39px;
+      height: 54px;
+      margin-bottom: 4px;
+
+      @include screen('sm') {
+        width: 35px;
+        height: 49px;
+      }
+    }
+
+    &_pets {
+      width: 54px;
+      height: 53px;
+      margin-right: -4px;
+
+      @include screen('sm') {
+        width: 49px;
+        height: 48px;
+      }
+    }
+
+    &_parking {
+      width: 65px;
+      height: 42px;
+      margin-right: -4px;
+
+      @include screen('sm') {
+        width: 59px;
+        height: 38px;
+      }
+    }
+
+    &_terrace {
+      width: 36px;
+      height: 58px;
+      margin-right: 2px;
+
+      @include screen('sm') {
+        width: 32px;
+        height: 52px;
+      }
+    }
+
+    &_fruit {
+      width: 42px;
+      height: 50px;
+
+      @include screen('sm') {
+        width: 38px;
+        height: 45px;
+      }
+    }
+
+    &_bar {
+      width: 45px;
+      height: 48px;
+
+      @include screen('sm') {
+        width: 41px;
+        height: 44px;
+      }
+    }
+
+    &_cafe {
+      width: 26px;
+      height: 45px;
+
+      @include screen('sm') {
+        width: 23px;
+        height: 41px;
+      }
+    }
+  }
+}
+
+.facility-checkbox {
+
+  &__input {
+    display: none;
+
+    &:checked~.facility {
+      border-color: $color-hint-bg;
+      background-color: $color-hint-bg;
+      color: $color-white;
+    }
+
+    &:checked~.facility .facility {
+
+      &__check {
+        opacity: 1;
+      }
+
+      &__icon {
+        fill: $color-facility-active;
+      }
+    }
+  }
+
+  &:hover .facility {
+    border-color: $color-facility-hover;
+  }
+
+  .facility {
+    cursor: pointer;
+
+    &__name {
+      line-height: 1.25;
     }
   }
 }
