--- a/app/pages/new-space/new-space-step3.pug
+++ b/app/pages/new-space/new-space-step3.pug
@@ -11,7 +11,7 @@ block content
     .container
       +e.wrapper
         +page-header-side
-          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to space list
+          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to previous step
         +page-header-main._main_mgt
           +breadcrumbs-form
             +breadcrumbs(['Home', 'My offers', 'Create new Space']).__navigation.hide-md
@@ -20,6 +20,7 @@ block content
             +link-icon('save')(href="#")._no-shadow._icon_gray-dark._icon_pad30._bold.__link All changes saved
       +progress(42.9)
   +content-origin._wide-lg._reverse._last
+    .container
       +e.wrapper
         +content-column-aside.hide-md
           +side-navigation('Please choose your Space available facilities.')._pt46
@@ -29,6 +30,27 @@ block content
               +page-info-title Facilities
               +page-info-description Step 3 <i>of 7</i>
         +content-column-main._no-ptop
+          - var facilitiesB = getData('business-facilities.json')
+          - var facilitiesA = getData('additional-facilities.json')
+          +form()._white._flex(data-validated-form)
+            +e.container_pds
+              +form-section._mg65
+                +form-section-header._mg21
+                  +form-section-title Business Facilities
+                +grid.grid_30x40
+                  each item in facilitiesB
+                    +col({ xl: 2, lg: 3, sm: 4, xs: 6})
+                      +facility-checkbox(item.icon, item.iconClass, item.name, item.value, item.checked)!= item.title
+              +form-section._mg65
+                +form-section-header._mg21
+                  +form-section-title Additional Facilities
+                +grid.grid_30x40
+                  each item in facilitiesA
+                    +col({ xl: 2, lg: 3, sm: 4, xs: 6})
+                      +facility-checkbox(item.icon, item.iconClass, item.name, item.value, item.checked)!= item.title
+            +form-panel.__panel_border
+              +link-icon('select-arrow', 'button')(type="reset")._back._bold._no-shadow.__button Back
+              +button-icon('button', 'select-arrow').__button_wide Next
 
 
 block panels
