--- a/app/pages/new-space/new-space-step41.pug
+++ b/app/pages/new-space/new-space-step41.pug
@@ -11,7 +11,7 @@ block content
     .container
       +e.wrapper
         +page-header-side
-          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to space list
+          +link-icon('select-arrow')._no-shadow._back._bold.__back(href="#") Back to previous step
         +page-header-main._main_mgt
           +breadcrumbs-form
             +breadcrumbs(['Home', 'My offers', 'Create new Space']).__navigation.hide-md
