--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -30,6 +30,7 @@ block content
         +link(href="about-host.html") About Space Pool for Hosts (about-host.html)
         +link(href="new-space-step1.html") SpacePool - HOST My rental offers New Space Step 1 (new-space-step1.html)
         +link(href="new-space-step2.html") SpacePool - HOST My rental offers New Space Step 2 (new-space-step2.html)
+        +link(href="new-space-step3.html") SpacePool - HOST My rental offers New Space Step 3 (new-space-step3.html)
 
       +page-title._small Попапы
       +e.list
